spade-tests/src/snapshots/spade_tests__integration__trait_tests__method_non_inst_of_entity_errors_nicely.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    entity a(self) -> bool {true}
}

fn t(x: X) -> bool {
    x.a()
}


error: Expected a to be a function
  ┌─ testinput:8:7
  │
4 │     entity a(self) -> bool {true}
  │     ----------------------------- a is an entity
  ·
8 │     x.a()
  │       ^ Expected function
  │
  = consider adding inst
  │
8 │     x.inst a()
  │       +++++


