spade-tests/src/snapshots/spade_tests__integration__trait_tests__missing_4_method_in_trait_def_errors.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self);
    fn b(self);
    fn c(self);
    fn d(self);
}

struct A {}

impl X for A {
}


error: Missing methods a, b, c and 1 more
   ┌─ testinput:10:1
   │  
10 │ ╭ impl X for A {
11 │ │ }
   │ ╰─^ Missing definition of a, b, c and 1 more in this impl block


