spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_impls_of_same_trait_different_type_params_is_error.snap
---
source: spade-tests/src/integration.rs
---
trait X<T> {}
impl X<bool> for bool {}
impl X<uint<1>> for bool {}


error: An impl of trait X for bool already exists
  ┌─ testinput:3:1
  │
3 │ impl X<uint<1>> for bool {}
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^ An impl of trait X for bool already exists
  │
  = note: The impls only differ by type parameters of the trait, which is currently not supported
